# db-helpers

./: .gitignore  Cargo.toml  Changelog.md  README.md
derive/: Cargo.toml
derive/src/: lib.rs  parsers.rs  pg.rs  query.rs  table.rs  utils.rs
derive/tests/fail/: missing_brace.rs  table_with_spaces.rs
derive/tests/success/: valid_query.rs
foreigns/: Cargo.toml
foreigns/src/: lib.rs
src/: checked.rs  legacy.rs  lib.rs  pg.rs  query.rs
types/src/: lib.rs
