[package]
description = "Various macros to help with database queries and tables"
edition = "2021"
license = "MIT"
name = "db-helpers"
version = "0.11.1"
[workspace]
members = ["derive", "foreigns"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foreigns = { path = "./foreigns", optional = true }
derive = { path = "./derive" }

[features]
default = ["pg"]
pg = ["foreigns/pg", "derive/pg"]
