[package]
description = "Various macros to help with database queries and tables"
edition = "2021"
license = "GPL-2.0"
name = "db-helpers"
version = "1.3.1"
authors = ["Nikos Efthias<nikos@mugsoft.io>"]
repository = "https://github.com/NikosEfthias/db-helpers"
[workspace]
members = ["derive"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db-helpers-derive = "0.3.1"
#db-helpers-derive = { path = "./derive" }
tokio-postgres = { version = "0.7", optional = true }

[features]
default = ["pg"]
pg = ["tokio-postgres", "db-helpers-derive/pg"]
