[package]
name = "derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["extra-traits"] }
lazy_static = "1.4.0"
[dev-dependencies]
db-helpers = { path = "../" }
trybuild = "1.0.56"
[features]
default = ["pg"]
pg = []
