[package]
description = "Various macros to help with database queries and tables"
name = "db-helpers-derive"
version = "0.4.0"
authors = ["Nikos Efthias<nikos@mugsoft.io>"]
license = "GPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["extra-traits"] }
lazy_static = "1.4.0"
parking_lot = "0.12.0"
[dev-dependencies]
db-helpers = { path = "../" }
trybuild = "1.0.56"
[features]
default = ["pg"]
pg = []
